# Find-A-Coach

./: .gitignore  README.md  docker-compose-example.yml  heroku.yml
backend/: Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/api/: settings.py  urls.py
backend/coachapi/: asgi.py  settings.py  wsgi.py
backend/coaches/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/coaches/migrations/: 0001_initial.py  0002_coach_email.py
frontend/: .eslintrc.js  .gitignore  Dockerfile  package-lock.json  package.json
frontend/src/: App.vue  axios.js  main.js  router.js
frontend/src/components/auth/: LoginForm.vue
frontend/src/components/coaches/: CoachFilter.vue  CoachForm.vue  CoachItem.vue
frontend/src/components/layout/: TheHeader.vue
frontend/src/components/requests/: RequestItem.vue
frontend/src/components/ui/: BaseBadge.vue  BaseButton.vue  BaseCard.vue  BaseDialog.vue
frontend/src/pages/: NotFound.vue
frontend/src/pages/auth/: UserAuth.vue
frontend/src/pages/coaches/: CoachDetail.vue  CoachRegistration.vue  CoachesList.vue
frontend/src/pages/requests/: ContactCoach.vue  RequestsReceived.vue
frontend/src/store/: index.js
frontend/src/store/modules/auth/: actions.js  getters.js  index.js  mutations.js
frontend/src/store/modules/coaches/: actions.js  getters.js  index.js  mutations.js  sampleData.js
frontend/src/store/modules/requests/: actions.js  getters.js  index.js  mutations.js
